[package]
name = "ic-kit"
version = "0.4.11"
description = "Testable Canister Developer Kit for the Internet Computer."
authors = ["Parsa Ghadimi <parsa@fleek.co>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Psychedelic/ic-kit"
homepage = "https://docs.rs/ic-kit"
documentation = "https://docs.rs/ic-kit"
categories = ["api-bindings", "data-structures", "development-tools::testing"]
keywords = ["internet-computer", "canister", "cdk", "fleek"]
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
candid = "0.9"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.5"
futures = { version = "0.3.17", default-features = false, features = ["executor"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }

# [patch.crates-io]
# num-bigint = { git = "https://github.com/rust-num/num-bigint" }
